--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -8,6 +8,9 @@
     <title>Boštjan Kamnik</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+    <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
+    />
 </head>
 
 <body>
@@ -95,9 +98,12 @@
     </main>
 
     <footer>
-        <div class="w3-content">
+        <div class="w3-content w3-center">
             let's work together
-        </div>
+            <a href="" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
+            </a>
+            <a href="" class="w3-btn"> <i class="fa-solid fa-envelope w3-xxlarge"></i>
+            </div>
     </footer>
 
     <script src="./index.js"></script>
