add overlay effect

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -58,7 +58,10 @@
                             </div>
                         </div>
                         <div id="about-aside" class="w3-col m6">
-                            <img src="" alt="" class="w3-amber">
+                            <div class="img-wrapper"> 
+                                <img src="" alt="" class="img-about w3-amber">
+                                <img class="img-overlay-right" src="/images/decorative/paint-vert.png" alt="">
+                            </div>
                             <nav class="w3-content w3-center">
                                 <ul class="w3-bar">
                                     <li class="w3-bar-item">
@@ -103,7 +106,7 @@
             <a href="" class="w3-btn"> <i class="fa-brands fa-linkedin w3-xxlarge"></i>
             </a>
             <a href="" class="w3-btn"> <i class="fa-solid fa-envelope w3-xxlarge"></i>
-            </div>
+        </div>
     </footer>
 
     <script src="./index.js"></script>
