--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -59,7 +59,8 @@
                         </div>
                         <div id="about-aside" class="w3-col m6">
                             <div class="img-wrapper"> 
-                                <img src="" alt="" class="img-about w3-amber">
+                                <img src="" alt="" class="img-about w3-amber web-dev-toggle-bookmark w3-animate-opacity">
+                                <img src="" alt="" class="img-about w3-light-blue w3-hide electronics-toggle-bookmark w3-animate-opacity">
                                 <img class="img-overlay-right" src="/images/decorative/paint-vert.png" alt="">
                             </div>
                             <nav class="w3-content w3-center">
