move media queries into seperate css files

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -6,7 +6,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Boštjan Kamnik</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="desktop.css">
+    <link rel="stylesheet" href="tablet.css" media="screen and (min-width: 601px and max-width:993px)">
+    <link rel="stylesheet" href="mobile.css" media="screen and (max-width:600px)">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
@@ -45,7 +47,7 @@
             <div class="w3-container">
                 <div class="w3-content">
                     <div class="w3-row">
-                        <div id="about-text" class="w3-col m5 w3-margin-right">
+                        <div id="about-text" class="w3-col m6">
                             <div class="web-dev-toggle-bookmark w3-animate-opacity">
                                 <h2>Web Developer</h2>
                                 <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Earum voluptatibus esse nesciunt consectetur vero eligendi! Fugit, quisquam exercitationem non delectus natus rem! Hic quam quaerat non, obcaecati placeat necessitatibus
@@ -81,7 +83,6 @@
                     </div>
                 </div>
             </div>
-
         </section>
 
         <section id="portfolio">
