--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -13,18 +13,38 @@
     <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"> -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
+
+    <script src="./index.js"></script>
 </head>
 
 <body>
+    <div id="navSidebar" class="w3-sidebar w3-bar-block w3-black w3-center w3-padding w3-topbar w3-hide w3-animate-left">
+        <button onclick="w3_close()" class="w3-button w3-xlarge w3-right">&times;</button>
+        <div class="w3-padding-top-64 w3-margin-top">
+            <a href="#" class="w3-bar-item w3-button w3-xlarge">projects</a>
+        </div>
+        <div class="w3-margin-top">
+            <a href="#" class="w3-bar-item w3-button w3-xlarge">contact</a>
+        </div>
+    </div>
     <header>
-        <nav class="w3-content w3-center">
-            <ul class="w3-bar">
+        <nav class="w3-hide-medium w3-hide-large">
+            <div class="w3-topbar w3-bar w3-block">
+                <h1 class="w3-left-align w3-bar-item">kamnik boštjan</h1>
+                <button id="nav-menu-toggle" class="w3-button w3-bar-item w3-right" onclick="w3_open()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
+            </div>
+
+            <!-- Sidebar -->
+        </nav>
+
+        <nav class="w3-content w3-center w3-hide-small">
+            <ul class="w3-bar ">
                 <li class="w3-bar-item">
                     <a class="w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#">Boštjan Kamnik
                 </a>
                 </li>
                 <li class="w3-bar-item ">
-                    <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#portfolio">portfolio</a>
+                    <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black " href="#portfolio">portfolio</a>
                 </li>
                 <li class="w3-bar-item ">
                     <a class="w3-text-red w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#contact">contact</a>
@@ -60,7 +80,7 @@
                             </div>
                         </div>
                         <div id="about-aside" class="w3-col m6">
-                            <div class="img-wrapper"> 
+                            <div class="img-wrapper">
                                 <img src="" alt="" class="img-about w3-amber web-dev-toggle-bookmark w3-animate-opacity">
                                 <img src="" alt="" class="img-about w3-light-blue w3-hide electronics-toggle-bookmark w3-animate-opacity">
                                 <img class="img-overlay-right" src="/images/decorative/paint-vert.png" alt="">
@@ -110,8 +130,6 @@
             <a href="" class="w3-btn"> <i class="fa-solid fa-envelope w3-xxlarge"></i>
         </div>
     </footer>
-
-    <script src="./index.js"></script>
 </body>
 
 </html>
