--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css" integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==" crossorigin="anonymous" referrerpolicy="no-referrer"
     />
 
+    <script src="./jquery.js"></script>
     <script src="./index.js"></script>
 </head>
 
@@ -28,10 +29,10 @@
         </div>
     </div>
     <header>
-        <nav class="w3-hide-medium w3-hide-large">
-            <div class="w3-topbar w3-bar w3-block">
-                <h1 class="w3-left-align w3-bar-item">kamnik boštjan</h1>
-                <button id="nav-menu-toggle" class="w3-button w3-bar-item w3-right" onclick="w3_open()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
+        <nav id="mobile-nav" class="w3-hide-medium w3-hide-large">
+            <div class="w3-topbar w3-border-black w3-display-container w3-container">
+                <h1>kamnik boštjan</h1>
+                <button class="w3-button w3-display-right w3-margin-right" onclick="w3_open()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
             </div>
 
             <!-- Sidebar -->
