--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -19,6 +19,7 @@
 </head>
 
 <body>
+    <!-- Sidebar -->
     <div id="navSidebar" class="w3-sidebar w3-bar-block w3-black w3-center w3-padding w3-topbar w3-hide w3-animate-left">
         <button onclick="w3_close()" class="w3-button w3-xlarge w3-right">&times;</button>
         <div class="w3-padding-top-64 w3-margin-top">
@@ -28,17 +29,16 @@
             <a href="#" class="w3-bar-item w3-button w3-xlarge">contact</a>
         </div>
     </div>
-    <header>
-        <nav id="mobile-nav" class="w3-hide-medium w3-hide-large">
+    <header id="header-mobile" class="w3-hide-medium w3-hide-large">
+        <nav id="mobile-nav" class="w3-top">
             <div class="w3-topbar w3-border-black w3-display-container w3-container">
                 <h1>kamnik boštjan</h1>
                 <button class="w3-button w3-display-right w3-margin-right" onclick="w3_open()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
             </div>
-
-            <!-- Sidebar -->
         </nav>
-
-        <nav class="w3-content w3-center w3-hide-small">
+    </header>
+    <header id="header-primary" class="w3-hide-small">
+        <nav class="w3-content w3-center">
             <ul class="w3-bar ">
                 <li class="w3-bar-item">
                     <a class="w3-text-grey w3-button w3-hover-none w3-border-white w3-bottombar w3-hover-border-black" href="#">Boštjan Kamnik
