toggle w3-top on mobile nav when toggling menu

--- a/portfolio/layouts/index.html
+++ b/portfolio/layouts/index.html
@@ -21,7 +21,7 @@
 <body>
     <!-- Sidebar -->
     <div id="navSidebar" class="w3-sidebar w3-bar-block w3-black w3-center w3-padding w3-topbar w3-hide w3-animate-left">
-        <button onclick="w3_close()" class="w3-button w3-xlarge w3-right">&times;</button>
+        <button onclick="toggleSidebarNav()" class="w3-button w3-xlarge w3-right">&times;</button>
         <div class="w3-padding-top-64 w3-margin-top">
             <a href="#" class="w3-bar-item w3-button w3-xlarge">projects</a>
         </div>
@@ -33,7 +33,7 @@
         <nav id="mobile-nav" class="w3-top">
             <div class="w3-topbar w3-border-black w3-display-container w3-container">
                 <h1>kamnik boštjan</h1>
-                <button class="w3-button w3-display-right w3-margin-right" onclick="w3_open()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
+                <button class="w3-button w3-display-right w3-margin-right" onclick="toggleSidebarNav()"><i class="fa-solid fa-bars w3-xxlarge"></i></button>
             </div>
         </nav>
     </header>
