--- a/portfolio/static/mobile.css
+++ b/portfolio/static/mobile.css
@@ -1,11 +1,13 @@
 #mobile-nav div{
-    background-color: teal;
+    background-color: darkred;
+    color: white;
+    height: 80px;
 }
 
 #header-mobile:after{
     display: block;
     content: '';    
-    margin-top: 95px;
+    margin-top: 80px;
 }
 
 #nav-menu-toggle {
@@ -21,6 +23,10 @@
     width: 100%;
 }
 
+/* ---------------------------------- about --------------------------------- */
+#mobile-img-about img{
+    height: 100px;
+}
 
 #about {
     margin-left: 0px;
